--- a/style.css
+++ b/style.css
@@ -37,6 +37,75 @@
 }
 
 
+
+
+
+
+
+/* Banner Section*/
+
+.heroText {
+    font-size: 65px;
+}
+
+
+.customColor{
+    color: #E95A08;
+    font-weight: bold;
+}
+
+
+
+.bannerContainer{
+
+    width: 100%;
+    height: 100vh;
+}
+
+
+.bannerSection{
+    height: 60vh;
+    width: 1260px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.headinhSection,
+.imgSection{
+    width: 50%;
+}
+
+.heroPara{
+    width: 500px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Mobile Device */
+
 @media (width <= 40rem) { 
     .navbarContainer{
     height: 15vh;
@@ -61,4 +130,42 @@
     font-family: sans-serif;
  }
 
+
+
+/*Banner Section*/
+.bannerContainer{
+
+    width: 100%;
+    height: 100vh;
 }
+
+.bannerSection{
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 0px 0px 30px 0px;
+    
+}
+
+.heroText {
+    font-size: 24px;
+    margin-top: 0px;
+}
+.heroPara{
+    width:  auto;
+    margin-top: 10px;
+}
+
+.headinhSection,
+.imgSection{
+    width: 100%;
+}
+
+.headingSection{
+    padding: 0px 20px 0px 20px;
+    margin-bottom: 20px;
+}
+
+
+}
+/*END*/
