--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     font-family: "Raleway", sans-serif;
     background: #F4F7FF;
 }
-
 .cartIcon{
     height: 20px;
 }
@@ -16,20 +15,17 @@
     padding: 20px 0px 20px 0px;
 
 }
-
 .navBar{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
 .menuLinks{
     display: flex;
     justify-content: space-around;
     gap: 50px; 
     align-items: center;   
 }
-
 .cartAndText{
     display: flex;
     flex-direction: row;
@@ -42,27 +38,22 @@
 
 
 
+
+
 /* Banner Section*/
 
 .heroText {
     font-size: 65px;
 }
-
-
 .customColor{
     color: #E95A08;
     font-weight: bold;
 }
-
-
-
 .bannerContainer{
 
     width: 100%;
     height: 60vh;
 }
-
-
 .bannerSection{
     height: 60vh;
     width: 1260px;
@@ -71,15 +62,19 @@
     justify-content: space-between;
     align-items: center;
 }
-
 .headinhSection,
 .imgSection{
     width: 50%;
 }
-
 .heroPara{
     width: 500px;
 }
+
+
+
+
+
+
 
 
 /*Our Plant Section */
@@ -89,26 +84,21 @@
     height: 80vh;
     
 }
- 
-
 .ourPlantSection{
     width: 1260px;
     height: 80vh;
     margin: auto;
     padding-top: 50px;
 }
-
 .heroHeading{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-
 .heroHeading p{
     margin-top: 10px;
 }
-
 .cardSection{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -116,19 +106,16 @@
     margin-top: 50px;
     padding-bottom: 80px;
 }
-
 .cards button,
 .cards img{
     width: 100%;
 }
-
 .cards button{
     background: #E95A08;
     padding: 10px;
     color: white;
     cursor: pointer;
     transition: .5s;
-
 }
 .cards button:hover{
     background: #ffe9dc;
@@ -141,15 +128,16 @@
 
 
 
+
+
+
 /* Shop Section */
 
 .flowerShopContainer{
-    height: 100vh;
+    height: 80vh;
     width: 100%;
     margin-top: 600px;
 }
-
-
 .shopSection{
     height: 80vh;
     width: 1260px;
@@ -157,30 +145,24 @@
     margin: auto;
     justify-content: space-around;
 }
-
 .imgBoxShop,
 .textBoxShop{
     width: 50%;
 }
-
 .textBoxShop h1{
     margin-bottom: 20px;
 }
-
 .textBoxShop li:nth-child(2),
 .textBoxShop li:nth-child(3){
     margin-top: 20px;
 }
-
 .textBoxShop p{
     color: gray;
     font-size: 17px;
 }
-
 .textBoxShop ul{
     margin-left: 20px;
 }
-
 .trustBadge{
     position: absolute;
     left: 35%;
@@ -194,6 +176,77 @@
 
 
 
+/* Deal Section */
+.dealContainer{
+    height: 80vh;
+    width: 100%;
+}
+
+
+.dealSection{
+    height: 80vh;
+    width: 1260px;
+    margin: auto;
+}
+
+
+
+.box_1{
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    gap: 20px;
+}
+
+.box_2{
+    height: 450px;
+    width: 100%;
+}
+
+
+
+.deal_boxes{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 20px;
+    margin-top: 100px;
+    
+}
+
+.childBox{
+    height: 100%;
+    width: 100%;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.childBox h2,a{
+    font-size: 20px;
+    background-color: transparent;
+    color: white;
+}
+.childBox a{
+    text-decoration: underline;
+    font-size: 18px;
+}
+.childOne{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./assets/deal-bloom.png); 
+}
+.childTwo{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./assets/deal-ana.png); 
+}
+.childThree{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./assets/deal-zabo.png); 
+}
 
 
 
@@ -205,12 +258,7 @@
 
 
 
-
-
-
-
-/* Mobile Device */
-
+/* Mobile Responsive*/
 @media (width <= 40rem) { 
     .navbarContainer{
     height: 15vh;
@@ -224,26 +272,25 @@
  .menuLinks li:nth-child(3){
     display: none;
  }
-
  .logo img{
     height: 50px;
-
  }
-
  .cartAndText a{
     font-size: 18px;
     font-family: sans-serif;
  }
+/*END*/
+
+
+
 
 
 
 /*Banner Section*/
 .bannerContainer{
-
     width: 100%;
     height: 70vh;
 }
-
 .bannerSection{
     width: 100%;
     display: flex;
@@ -251,7 +298,6 @@
     padding: 0px 0px 30px 0px;
     
 }
-
 .heroText {
     font-size: 24px;
     margin-top: 0px;
@@ -260,24 +306,23 @@
     width:  auto;
     margin-top: 10px;
 }
-
 .headinhSection,
 .imgSection{
     width: 100%;
 }
-
 .headingSection{
     padding: 0px 20px 0px 20px;
     margin-bottom: 20px;
 }
+/*END*/
+
+
 
 
 
 
 
 /*Our Plant Section*/
-
-
 .ourPlantSection{
     width: 100%;
     padding: 0px 20px 0px 20px;
@@ -290,14 +335,13 @@
     margin-top: 50px;
     padding-bottom: 80px;
 }
-
 .heroHeading p{
     width: auto;
 }
-
 .heroHeading h1{
     font-size: 30px;
 }
+/*END*/
 
 
 
@@ -307,9 +351,7 @@
 
 
 
-
-
-
+/* Shop Section */
 .trustBadge{
    display: none;
 }
@@ -355,6 +397,44 @@
 
 .hideOnMobile{
     display: none;
+}
+
+
+/*Deal Section */
+.dealContainer{
+    height: 80vh;
+    width: 100%;
+    padding: 0px 20px 50px 20px;
+}
+
+.dealSection{
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 300px;
+    
+}
+
+.deal_boxes{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-bottom: 50px;
+}
+
+
+.box_1{
+    height: 350px;
+    width: 100%;
+}
+
+.box_2{
+    height: 175px;
+    width: 100%;
+    
 }
 
 
