--- a/style.css
+++ b/style.css
@@ -252,12 +252,12 @@
 
 
 
-/* Join and Subscirbe */
+/* News Letter Section */
 
 .joinContainer{
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./assets/news-letter-bg.png); 
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(./assets/news-letter-bg.png); 
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -464,7 +464,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 300px;
+    margin-top: 200px;
     
 }
 
@@ -490,13 +490,12 @@
 
 
 
-
-
+/* News Letter Section */
 
 .joinContainer{
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./assets/news-letter-bg.png); 
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(./assets/news-letter-bg.png); 
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
