Footer Section Added with optional animation and Alert box

--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@
     gap: 10px;
 }
 
+.cartAndText a{
+    color: black;
+    font-size: 17px;
+}
+
 
 
 
@@ -169,8 +174,17 @@
     margin-top: -150px;
     z-index: 10;
     background: transparent;
+    animation: spin 5s linear infinite;
 }
 
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 
 
 
@@ -295,7 +309,58 @@
 }
 
 
+/* END*/
 
+
+
+
+
+
+/* Footer Section*/
+.footerContainer{
+    height: 40vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footerSection {
+    height: 30vh;
+    width: 1260px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    justify-content: center;
+    flex-direction: row;
+    margin: auto;
+    justify-content: space-between;
+    padding-top: 50px;
+    gap: 100px;
+}
+
+
+.socialIcons{
+    display: flex;
+    flex-direction: row;
+    flex-direction: flex-end;
+    justify-content: right;
+    gap: 20px;
+}
+
+.featurekLinks,
+.quickLinks{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 30px;
+}
+
+
+
+
+
+
+/* END */
 
 
 
@@ -328,6 +393,7 @@
  .cartAndText a{
     font-size: 18px;
     font-family: sans-serif;
+    color: black;
  }
 /*END*/
 
@@ -532,5 +598,32 @@
     justify-content: center;
     align-items: center;
 }
+
+
+
+
+/*Footer Section */
+.footerSection {
+    display: grid;
+    grid-template-columns: 1fr;
+    flex-direction: row;
+    margin: auto;
+    gap: 20px;
+    padding: 0px 20px 0px 20px;
+}
+.socialIcons{
+    display: flex;
+    flex-direction: row;
+    flex-direction: flex-end;
+    justify-content: left;
+    gap: 20px;
+    padding-bottom: 50px;
+}
+
+
+
+
+
+
 }
 /*END*/
